--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,11 @@ time {
 .post-content img {
     display: block;
     margin: 0 auto;
+    width: 100%;
+}
+
+.post-content h1 {
+    text-align: left;
 }
 
 a {
